--- a/Talenti/www.talenti.in/workspace.html
+++ b/Talenti/www.talenti.in/workspace.html
@@ -118,30 +118,30 @@ background: rgba(0, 0, 0, 0.21); color:#fff;}.sp_left:hover,.sp_right:hover{back
 
   
   <!-- menu -->
-        <nav class="nav_type_5"><ul id="menu-main-menu" class="menu sf-js-enabled sf-arrows" style="touch-action: pan-y;"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-7514"><a href="index.html">Home</a></li>
-<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-7478"><a href="#" class="sf-with-ul">About us</a>
-<ul class="sub-menu sf-js-enabled sf-arrows" style="display: none; touch-action: pan-y;">
-	<li class="   menu-item menu-item-type-post_type menu-item-object-page menu-item-7471 "><a href="#">Company Overview</a></li>
-	<li class="   menu-item menu-item-type-post_type menu-item-object-page menu-item-7472 "><a href="#">Leadership Team</a></li>
-	<li class="   menu-item menu-item-type-post_type menu-item-object-page menu-item-7481 "><a href="#">Why us</a></li>
+       <nav class="nav_type_5"><ul id="menu-main-menu" class="menu"><li class="   menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-6 current_page_item menu-item-7514 "><a href="index.html">Home</a></li>
+<li class="   menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-7478 "><a href="#">About us</a>
+<ul class="sub-menu">
+	<li class="   menu-item menu-item-type-post_type menu-item-object-page menu-item-7471 "><a href="company-overview/index.html">Company Overview</a></li>
+	<li class="   menu-item menu-item-type-post_type menu-item-object-page menu-item-7472 "><a href="leadership-team/index.html">Leadership Team</a></li>
+	<li class="   menu-item menu-item-type-post_type menu-item-object-page menu-item-7481 "><a href="why-us-2/index.html">Why us</a></li>
 </ul>
 </li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page current-menu-ancestor current-menu-parent current_page_parent current_page_ancestor menu-item-has-children menu-item-7475"><a href="#" class="sf-with-ul">Services</a>
-<ul class="sub-menu sf-js-enabled sf-arrows" style="display: none; touch-action: pan-y;">
-	<li class="   menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-169 current_page_item menu-item-7474 "><a href="http://www.talenti.in/recruitment/">Recruitment</a></li>
-	<li class="   menu-item menu-item-type-post_type menu-item-object-page menu-item-7473 "><a href="http://www.talenti.in/strategic/">Strategic</a></li>
-	<li class="   menu-item menu-item-type-post_type menu-item-object-page menu-item-7473 "><a href="#">Workplace</a></li>
+<li class="   menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-7475 "><a href="services/index.html">Services</a>
+<ul class="sub-menu">
+	<li class="   menu-item menu-item-type-post_type menu-item-object-page menu-item-7474 "><a href="recruitment/index.html">Recruitment</a></li>
+	<li class="   menu-item menu-item-type-post_type menu-item-object-page menu-item-7473 "><a href="strategic/index.html">Strategic</a></li>
+	<li class="   menu-item menu-item-type-post_type menu-item-object-page menu-item-7473 "><a href="workspace.html">Workplace</a></li>
 </ul>
 </li>
-<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-7479"><a href="#" class="sf-with-ul">Life at Talenti</a>
-<ul class="sub-menu sf-js-enabled sf-arrows" style="display: none; touch-action: pan-y;">
-	<li class="   menu-item menu-item-type-post_type menu-item-object-page menu-item-7468 "><a href="#">Careers</a></li>
-	<li class="   menu-item menu-item-type-post_type menu-item-object-page menu-item-7470 "><a href="#">Gallery</a></li>
+<li class="   menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-7479 "><a href="#">Life at Talenti</a>
+<ul class="sub-menu">
+	<li class="   menu-item menu-item-type-post_type menu-item-object-page menu-item-7468 "><a href="careers/index.html">Careers</a></li>
+	<li class="   menu-item menu-item-type-post_type menu-item-object-page menu-item-7470 "><a href="gallery/index.html">Gallery</a></li>
 </ul>
 </li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-7467"><a href="#">Case Studies</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-7477"><a href="#">Contact us</a></li>
-</ul>      <div id="nav_button"></div></nav>
+<li class="   menu-item menu-item-type-post_type menu-item-object-page menu-item-7467 "><a href="case-studies/index.html">Case Studies</a></li>
+<li class="   menu-item menu-item-type-post_type menu-item-object-page menu-item-7477 "><a href="contact-us/index.html">Contact us</a></li>
+</ul>      </nav>
       <!-- menu END-->
           </div>
     </header>
